# picasso

./: .gitignore  AUTHORS  CMakeLists.txt  CREDITS  ChangeLog  Doxyfile  LICENSE  Makefile.am  README  README.md  ads.txt  build_android.sh  build_linux.sh  build_macosx.sh  build_proj.sh  build_windows.bat  clean_code.sh  configure.in  index.html  params.json  picasso.gyp
.github/: FUNDING.yml
cfg/: OFL.txt  font_config.cfg
demos/: GNUmakefile.gix  GNUmakefile.gtk2  GNUmakefile.minigui  GNUmakefile.qt4  GNUmakefile.win32  Info.plist  Makefile.am  clock.c  demos.cmake  demos.gypi  flowers.c  interface.h  lake.c  platform_apple.m  platform_gix.c  platform_gtk2.c  platform_minigui.c  platform_qt4.cpp  platform_win32.c  subwaymap.c  tiger.c  timeuse.h
design_docs/: README.md  svg_tiny12_animation_design.md
ext/: Makefile.am  ext.cmake  ext.gypi
ext/image_loader/: Makefile.am  Makefile.gnu  image.cmake  image.gypi  psx_color_convert.h  psx_image.def  psx_image.gypi  psx_image.rc  psx_image_io.c  psx_image_io.h  psx_image_loader.c  psx_image_modules.c  psx_image_modules.h  psx_list.h  resource.h
ext/image_loader/gif/: Makefile.am  gif.cmake  gif.gypi  gif_module.c
ext/image_loader/jpeg/: Makefile.am  jpeg.cmake  jpeg.gypi  jpeg_module.c
ext/image_loader/png/: Makefile.am  png.cmake  png.gypi  png_module.c
ext/image_loader/webp/: Makefile.am  webp.cmake  webp.gypi  webp_module.c
html/: annotated.html  classes.html  dir_16464c40f547f4dc5155e6df01c2b151.html  dir_2cfd5afda6184b54ae21ec429f17db8c.html  dir_35d4b283fb502c1b1e451f1afc24abfa.html  dir_8b07ee5bbfb11c2ee6dd4cb971c5a0c4.html  dir_bafa8fdf8126af50a2064015f1ff64a0.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fcbcc25b06f1cef49ab0063b3634a9fa.html  dirs.html  expat_8h_source.html  expat__external_8h_source.html  files.html  ft2build_8h_source.html  ftbdf_8h_source.html  ftchapters_8h_source.html  ftcid_8h_source.html  ftdebug_8h_source.html  ftgasp_8h_source.html  (+127 more)
src/: Makefile.am  Makefile.gnu  aggheader.h  picasso.cpp  picasso.def  picasso.rc  picasso_api.cpp  picasso_canvas.cpp  picasso_engine_freetype2.cpp  picasso_engine_win32.cpp  picasso_font.cpp  picasso_font.h  picasso_font_api.cpp  picasso_font_cache.h  picasso_freetype2_load.cpp  picasso_global.h  picasso_gpc.cpp  picasso_gpc.h  picasso_gpu.cpp  picasso_gradient.cpp  picasso_gradient.h  picasso_gradient_api.cpp  picasso_helper.h  picasso_image.cpp  picasso_mask.cpp  picasso_mask.h  picasso_mask_api.cpp  picasso_matrix.cpp  picasso_matrix.h  picasso_matrix_api.cpp  picasso_objects.h  picasso_p.h  picasso_painter.cpp  picasso_painter.h  picasso_path.cpp  picasso_pattern.cpp  picasso_private.h  picasso_raster_adapter.cpp  picasso_raster_adapter.h  picasso_rendering_buffer.cpp  (+6 more)
src/common/: common.h  convert.h  curve.h  fastfill.h  fixedopt.h  graphic_base.h  graphic_path.h  math_type.h
src/core/: clipper.cpp  curve.cpp  device.cpp  fixedopt.cpp  graphic_path.cpp  matrix.cpp  memory_manager.cpp
src/font/: font_adapter.h  font_adapter_apple.mm  font_adapter_dummy.cpp  font_adapter_freetype2.cpp  font_adapter_win32.cpp  font_load_freetype2.cpp
src/gfx/: aggheader.h  gfx_blender_packed.h  gfx_blur.cpp  gfx_blur.h  gfx_composite_packed.h  gfx_device.cpp  gfx_device.h  gfx_font_adapter.h  gfx_font_adapter_apple.m  gfx_font_adapter_apple.mm  gfx_font_adapter_dummy.cpp  gfx_font_adapter_freetype2.cpp  gfx_font_adapter_win32.cpp  gfx_font_load_freetype2.cpp  gfx_gamma_function.h  gfx_gradient_adapter.cpp  gfx_gradient_adapter.h  gfx_image_accessors.h  gfx_image_filters.cpp  gfx_image_filters.h  gfx_line_generator.h  gfx_mask_layer.cpp  gfx_mask_layer.h  gfx_math.h  gfx_painter.cpp  gfx_painter.h  gfx_painter_helper.h  gfx_pixfmt_gray.h  gfx_pixfmt_rgb.h  gfx_pixfmt_rgb16.h  gfx_pixfmt_rgba.h  gfx_pixfmt_wrapper.h  gfx_raster_adapter.cpp  gfx_raster_adapter.h  gfx_rasterizer_cell.h  gfx_rasterizer_clip.h  gfx_rasterizer_scanline.h  gfx_renderer.h  gfx_rendering_buffer.cpp  gfx_rendering_buffer.h  (+10 more)
src/gfx/include/: agg_basics.h  agg_blur.h  agg_color_gray.h  agg_color_rgba.h  agg_config.h  agg_conv_adaptor_vcgen.h  agg_conv_curve.h  agg_ellipse.h  agg_image_accessors.h  agg_image_filters.h  agg_math.h  agg_math_stroke.h  agg_path_storage.h  agg_path_storage_integer.h  agg_pixfmt_rgb.h  agg_pixfmt_rgb_packed.h  agg_pixfmt_rgba.h  agg_rasterizer_cells_aa.h  agg_rasterizer_scanline_aa.h  agg_rasterizer_sl_clip.h  agg_renderer_base.h  agg_renderer_mclip.h  agg_rendering_buffer.h  agg_scanline_storage_bin.h  agg_span_gradient.h  agg_span_image_filter_rgb_packed.h  agg_span_image_filter_rgba.h  agg_span_pattern_rgb_packed.h  agg_span_pattern_rgba.h  agg_trans_affine.h  agg_trans_perspective.h  agg_trans_viewport.h  agg_vcgen_bspline.h  agg_vcgen_dash.h  agg_vcgen_smooth_poly1.h  agg_vertex_sequence.h  agg_vpgen_clip_polygon.h
src/gfx/lib/: agg_bspline.cpp  agg_curves.cpp  agg_image_filters.cpp  agg_line_aa_basics.cpp  agg_line_profile_aa.cpp  agg_rounded_rect.cpp  agg_trans_affine.cpp  agg_vcgen_dash.cpp  agg_vcgen_smooth_poly1.cpp
src/include/: agg_arc.h  agg_arrowhead.h  agg_basics.h  agg_bezier_arc.h  agg_blur.h  agg_bounding_rect.h  agg_bspline.h  agg_clip_liang_barsky.h  agg_color_rgba.h  agg_conv_adaptor_vpgen.h  agg_conv_bspline.h  agg_conv_clip_polygon.h  agg_conv_clip_polyline.h  agg_conv_close_polygon.h  agg_conv_concat.h  agg_conv_contour.h  agg_conv_dash.h  agg_conv_gpc.h  agg_conv_marker.h  agg_conv_marker_adaptor.h  agg_conv_segmentator.h  agg_conv_shorten_path.h  agg_conv_smooth_poly1.h  agg_conv_stroke.h  agg_conv_transform.h  agg_conv_unclose_polygon.h  agg_curves.h  agg_font_cache_manager.h  agg_font_freetype.h  agg_font_win32_tt.h  agg_gamma_functions.h  agg_gamma_lut.h  agg_glyph_raster_bin.h  agg_gradient_lut.h  agg_gsv_text.h  agg_line_aa_basics.h  agg_path_length.h  agg_path_storage_integer.h  agg_pixfmt_rgb.h  agg_pixfmt_rgb_packed.h  (+62 more)
src/lib/: agg_arc.cpp  agg_bezier_arc.cpp  agg_curves.cpp  agg_font_freetype.cpp  agg_font_win32_tt.cpp  agg_trans_affine.cpp  agg_vcgen_bspline.cpp  agg_vcgen_stroke.cpp
src/simd/: fastcopy_sse.h
(+700 files in other folders)
